--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
               <tr>
                   <th>Blackmarket
                   </th>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td> Another simple incremental-game, about selling drugs. You start with only a gun, and you have to build a drug empire to become more than a trillionnaire.
                   </td>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td><a href="/blackmarket/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
@@ -38,12 +46,20 @@
               <tr>
                   <th>Clicker Ultimate
                   </th>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td>The original author describes it as the ultimate textbased idle clicker!
                   </td>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td><a href="/clickerultimate/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
@@ -54,12 +70,20 @@
               <tr>
                   <th>Bubbleverse
                   </th>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td>Curious game about bubbles
                   </td>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td><a href="/bubbleverse/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
@@ -70,12 +94,20 @@
               <tr>
                   <th>GiantShaftEnterprises
                   </th>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td>Incremental idle game about building businesses and mining asteroids....and maybe conquering the galaxy along the way.
                   </td>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td><a href="/gse/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
@@ -86,12 +118,20 @@
               <tr>
                   <th>Lost
                   </th>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td>
                   </td>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td><a href="/Lost/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
@@ -102,12 +142,20 @@
               <tr>
                   <th>Space Company
                   </th>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td>
                   </td>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td><a href="/SpaceCompany/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
@@ -134,13 +182,45 @@
               <tr>
                   <th>Water Company
                   </th>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td>
                   </td>
+              <tr>
+              </tr>
                   <td><hr>
                   </td>
+              <tr>
+              </tr>
                   <td><a href="/WaterCompany/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
+                  </td>
+              </tr>
+          </table>
+      </div>
+      <div class="bit">
+          <table>
+              <tr>
+                  <th>Incremencer
+                  </th>
+              <tr>
+              </tr>
+                  <td><hr>
+                  </td>
+              <tr>
+              </tr>
+                  <td>An open-source browsergame version of the mobile app 'Idle Necromancer'.
+                  </td>
+              <tr>
+              </tr>
+                  <td><hr>
+                  </td>
+              <tr>
+              </tr>
+                  <td><a href="/incremencer/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
           </table>
