--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="bit">
           <table>
               <tr>
-                  <th>Incremencer
+                  <th>Incremancer
                   </th>
               <tr>
               </tr>
@@ -220,7 +220,7 @@
                   </td>
               <tr>
               </tr>
-                  <td><a href="/incremencer/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
+                  <td><a href="/incremancer/index.html" target="_blank">Play! (Opens in new Tab/Window!)</a>
                   </td>
               </tr>
           </table>
